// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migration golden files > SPEC-rich-text-format/AC-035 migrates ambiguous/alert-tone.json to its golden result 1`] = `
"{
    "status": "requires-review",
    "document": {
        "format": "frontify.rich-text",
        "formatVersion": 1,
        "model": {"id":"fixture.notes","version":3},
        "requiredCapabilities": [{"id":"core","version":1},{"id":"fixture.note","version":3}],
        "content": {
            "type": "doc",
            "attrs": {"lang":null,"dir":"auto"},
            "content": [
                {
                    "type": "note",
                    "attrs": {"tone":"alert"},
                    "content": [{"type":"paragraph","content":[{"type":"text","text":"Outage window tonight"}]}]
                },
                {
                    "type": "note",
                    "attrs": {"nodeId":"node-1","level":"info"},
                    "content": [{"type":"paragraph","content":[{"type":"text","text":"Docs moved to the wiki"}]}]
                },
                {
                    "type": "note",
                    "attrs": {"tone":"alert"},
                    "content": [{"type":"paragraph","content":[{"type":"text","text":"Rollback needs approval"}]}]
                }
            ]
        }
    },
    "diagnostics": [
        {
            "code": "migration.requires-review",
            "severity": "warning",
            "path": "/content/content/0",
            "messageKey": "migration.requires-review",
            "featureId": "fixture.note"
        },
        {
            "code": "migration.requires-review",
            "severity": "warning",
            "path": "/content/content/2",
            "messageKey": "migration.requires-review",
            "featureId": "fixture.note"
        }
    ],
    "manifest": {
        "sourceHash": "b6c7f7ad19074826a71bc78047f134e63851a72cdfd1813f590d9126674302c6",
        "targetHash": "204a2013ebc55db41cb80d66bb5597e1aba1ccc69ba409265528f2b5cb50240c",
        "steps": ["fixture.note.tone-to-level","fixture.notes.divider-to-rule"],
        "model": {"id":"fixture.notes","version":3},
        "packageVersion": "<package version>",
        "counts": {"migration.requires-review":2}
    }
}"
`;

exports[`migration golden files > SPEC-rich-text-format/AC-035 migrates ambiguous/tone-and-level.json to its golden result 1`] = `
"{
    "status": "requires-review",
    "document": {
        "format": "frontify.rich-text",
        "formatVersion": 1,
        "model": {"id":"fixture.notes","version":3},
        "requiredCapabilities": [{"id":"core","version":1},{"id":"fixture.note","version":3}],
        "content": {
            "type": "doc",
            "attrs": {"lang":null,"dir":"auto"},
            "content": [
                {"type":"paragraph","content":[{"type":"text","text":"Imported by an unknown writer"}]},
                {
                    "type": "note",
                    "attrs": {"tone":"info","level":"danger"},
                    "content": [{"type":"paragraph","content":[{"type":"text","text":"Which tone wins here"}]}]
                }
            ]
        }
    },
    "diagnostics": [
        {
            "code": "migration.requires-review",
            "severity": "warning",
            "path": "/content/content/1",
            "messageKey": "migration.requires-review",
            "featureId": "fixture.note"
        }
    ],
    "manifest": {
        "sourceHash": "7fa92a7dd1195373cf7cbed982cf3521c80c68c5d2ecd8c43786dd5bc0ab81bf",
        "targetHash": "475bf84f88730d8fc7c5f5edaa7ea2e0fcaeea585c453028cdb93e16b508327b",
        "steps": ["fixture.note.tone-to-level","fixture.notes.divider-to-rule"],
        "model": {"id":"fixture.notes","version":3},
        "packageVersion": "<package version>",
        "counts": {"migration.requires-review":1}
    }
}"
`;

exports[`migration golden files > SPEC-rich-text-format/AC-035 migrates v1-notes.json to its golden result 1`] = `
"{
    "status": "migrated",
    "document": {
        "format": "frontify.rich-text",
        "formatVersion": 1,
        "model": {"id":"fixture.notes","version":3},
        "requiredCapabilities": [{"id":"core","version":1},{"id":"fixture.note","version":3},{"id":"fixture.rule","version":1}],
        "content": {
            "type": "doc",
            "attrs": {"lang":null,"dir":"auto"},
            "content": [
                {"type":"paragraph","attrs":{"lang":null},"content":[{"type":"text","text":"Launch plan for Ada"}]},
                {
                    "type": "note",
                    "attrs": {"nodeId":"node-1","level":"info"},
                    "content": [{"type":"paragraph","content":[{"type":"text","text":"Ship the beta on Friday"}]}]
                },
                {"type":"horizontal_rule"},
                {
                    "type": "note",
                    "content": [{"type":"paragraph","content":[{"type":"text","text":"Default tone note"}]}],
                    "attrs": {"nodeId":"node-2","level":"info"}
                }
            ]
        }
    },
    "diagnostics": [],
    "manifest": {
        "sourceHash": "509c924e11c09631efd87a4c5669604725e4879d1d5e19bb44851753bbc559f7",
        "targetHash": "48f3fe7a432e210fb033f73bb7651793f76e9646a87476f34baef99da2387144",
        "steps": ["fixture.note.tone-to-level","fixture.notes.divider-to-rule"],
        "model": {"id":"fixture.notes","version":3},
        "packageVersion": "<package version>",
        "counts": {}
    }
}"
`;

exports[`migration golden files > SPEC-rich-text-format/AC-035 migrates v2-note.json to its golden result 1`] = `
"{
    "status": "migrated",
    "document": {
        "format": "frontify.rich-text",
        "formatVersion": 1,
        "model": {"id":"fixture.notes","version":3},
        "requiredCapabilities": [{"id":"core","version":1},{"id":"fixture.note","version":3},{"id":"fixture.rule","version":1}],
        "content": {
            "type": "doc",
            "attrs": {"lang":null,"dir":"auto"},
            "content": [
                {
                    "type": "note",
                    "attrs": {"nodeId":"note-7","level":"warning"},
                    "content": [
                        {
                            "type": "paragraph",
                            "attrs": {"lang":null},
                            "content": [{"type":"text","text":"Freeze the release branch"}]
                        }
                    ]
                },
                {"type":"horizontal_rule"}
            ]
        }
    },
    "diagnostics": [],
    "manifest": {
        "sourceHash": "3cf90dc1699ed3c3044ed834ff36295abcf69ce573c94aa2baef8370bb5e99cc",
        "targetHash": "9c3c379b5bfa4540b86cf0e996fc62e124a64886f942554a815d32d226a1686b",
        "steps": [],
        "model": {"id":"fixture.notes","version":3},
        "packageVersion": "<package version>",
        "counts": {}
    }
}"
`;

exports[`migration golden files > SPEC-rich-text-format/AC-035 migrates v3-current.json to its golden result 1`] = `
"{
    "status": "current",
    "document": {
        "format": "frontify.rich-text",
        "formatVersion": 1,
        "model": {"id":"fixture.notes","version":3},
        "requiredCapabilities": [{"id":"core","version":1},{"id":"fixture.note","version":3},{"id":"fixture.rule","version":1}],
        "content": {
            "type": "doc",
            "attrs": {"lang":null,"dir":"auto"},
            "content": [
                {
                    "type": "note",
                    "attrs": {"nodeId":"note-8","level":"danger","collapsed":true},
                    "content": [
                        {
                            "type": "paragraph",
                            "attrs": {"lang":null},
                            "content": [{"type":"text","text":"Rotate the signing keys"}]
                        }
                    ]
                },
                {"type":"horizontal_rule"}
            ]
        }
    },
    "diagnostics": [],
    "manifest": {
        "sourceHash": "1abcebfb535f7fa8748b47a8f8ea25a15ae6f5afbd01b7b02000d5ce4f26252e",
        "targetHash": "1abcebfb535f7fa8748b47a8f8ea25a15ae6f5afbd01b7b02000d5ce4f26252e",
        "steps": [],
        "model": {"id":"fixture.notes","version":3},
        "packageVersion": "<package version>",
        "counts": {}
    }
}"
`;

exports[`migration golden files > SPEC-rich-text-format/AC-035 migrates v4-newer.json to its golden result 1`] = `
"{
    "status": "current",
    "document": {
        "format": "frontify.rich-text",
        "formatVersion": 1,
        "model": {"id":"fixture.notes","version":4},
        "requiredCapabilities": [{"id":"core","version":1},{"id":"fixture.note","version":4},{"id":"fixture.rule","version":1}],
        "content": {
            "type": "doc",
            "attrs": {"lang":null,"dir":"auto"},
            "content": [
                {
                    "type": "note",
                    "attrs": {"nodeId":"note-9","level":"info","collapsed":false,"pinned":true},
                    "content": [
                        {
                            "type": "paragraph",
                            "attrs": {"lang":null},
                            "content": [{"type":"text","text":"Pinned by a newer writer"}]
                        }
                    ]
                }
            ]
        }
    },
    "diagnostics": [],
    "manifest": {
        "sourceHash": "079f1196087edffef0ed1df6e610657ccf75fd036f8124722f70349e45f9686d",
        "targetHash": "079f1196087edffef0ed1df6e610657ccf75fd036f8124722f70349e45f9686d",
        "steps": [],
        "model": {"id":"fixture.notes","version":3},
        "packageVersion": "<package version>",
        "counts": {}
    }
}"
`;
